--- a/src/app/pages/editor/editor.component.html
+++ b/src/app/pages/editor/editor.component.html
@@ -1,1 +1,13 @@
-<app-viewport class="viewport"></app-viewport>
+<app-viewport class="viewport" [color]="color"></app-viewport>
+<div class="toolbox">
+  <div class="colors">
+    <app-color-picker [(color)]="color" class="color-picker"></app-color-picker>
+    <color-circle
+      width="40"
+      circleSize="40"
+      [colors]="swatches"
+      [color]="color"
+      (onChangeComplete)="color = $event.color.hex"
+    ></color-circle>
+  </div>
+</div>
