--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,8 @@ body {
 canvas {
   display: block;
 }
+
+.chrome-picker {
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.1), 0 4px 8px rgba(0, 0, 0, 0.1) !important;
+  border-radius: 20px !important;
+}
