Added how to box

--- a/src/app/pages/editor/editor.component.html
+++ b/src/app/pages/editor/editor.component.html
@@ -10,4 +10,15 @@
       (onChangeComplete)="color = $event.color.hex"
     ></color-circle>
   </div>
+  <app-how-to></app-how-to>
+</div>
+<div class="copyright">
+  &copy;
+  <a
+    href="https://github.com/Hackder"
+    target="_blank"
+    (click)="$event.stopPropagation()"
+    >Hackder</a
+  >
+  All rights reserved
 </div>
