Fixed asset location and rebuild

--- a/src/app/components/color-picker/color-picker.component.html
+++ b/src/app/components/color-picker/color-picker.component.html
@@ -5,11 +5,11 @@
 >
   <img
     *ngIf="isBlack; else white"
-    src="/assets/palette-black.svg"
+    src="./assets/palette-black.svg"
     alt="Color palette icon"
   />
   <ng-template #white>
-    <img src="/assets/palette-white.svg" alt="Color palette icon" />
+    <img src="./assets/palette-white.svg" alt="Color palette icon" />
   </ng-template>
 </button>
 <color-chrome
