--- a/src/app/pages/editor/editor.component.scss
+++ b/src/app/pages/editor/editor.component.scss
@@ -24,7 +24,7 @@
   }
 }
 
-.colors {
+.tools {
   pointer-events: all;
   position: relative;
   display: flex;
@@ -41,4 +41,10 @@
   right: 0;
   color: #666666;
   margin: 20px 40px;
+}
+
+.trackball-checkbox {
+  width: 40px;
+  height: 40px;
+  margin-top: 40px;
 }
