--- a/src/app/pages/editor/editor.component.scss
+++ b/src/app/pages/editor/editor.component.scss
@@ -43,8 +43,12 @@
   margin: 20px 40px;
 }
 
-.trackball-checkbox {
+.circular-checkbox {
   width: 40px;
   height: 40px;
+  margin-top: 10px;
+}
+
+.trackball-checkbox {
   margin-top: 40px;
 }
